# vast

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  404.html  CMakeLists.txt  CMakePresets.json  CODEOWNERS  CONTRIBUTING.md  Dockerfile  README.md  base  example.c  extract_func.py  index.html  mark.md  progress.md  sitemap.xml  todo.txt  vcpkg-configuration.json  vcpkg.json
example/codegen/: CMakeLists.txt  README.md  codegen.cpp
include/vast/Interfaces/: ASTContextInterface.hpp  ASTContextInterface.td  ASTDeclInterface.hpp  ASTDeclInterface.td  ASTExprInterface.td  ASTNodesInterface.hpp  ASTNodesInterface.td  ASTStmtVisitorInterface.hpp  ASTStmtVisitorInterface.td  ASTTypeInterface.hpp  ASTTypeInterface.td  AggregateTypeDefinitionInterface.hpp  AggregateTypeDefinitionInterface.td  AliasTypeInterface.hpp  AliasTypeInterface.td  CMakeLists.txt  Common.td  DefaultDataLayoutTypeInterface.hpp  DefaultDataLayoutTypeInterface.td  ElementTypeInterface.hpp  ElementTypeInterface.td  SymbolInterface.hpp  SymbolInterface.td  SymbolRefInterface.hpp  SymbolTableInterface.hpp  SymbolTableInterface.td  TypeQualifiersInterfaces.hpp  TypeQualifiersInterfaces.td  TypeTraitExprInterface.hpp  TypeTraitExprInterface.td  TypedAttrInterface.hpp  TypedAttrInterface.td
include/vast/Interfaces/AST/: ASTContextInterface.hpp  ASTContextInterface.td  CMakeLists.txt  Common.td  ContextInterface.hpp  ContextInterface.td  DeclInterface.hpp  DeclInterface.td  ExprInterface.hpp  ExprInterface.td  StmtInterface.hpp  StmtInterface.td  StmtVisitor.h  TypeInterface.hpp  TypeInterface.td
include/vast/Interfaces/Analyses/: AnalysisDeclContextInterface.hpp  AnalysisDeclContextInterface.td  Common.td
include/vast/Interfaces/Analysis/: AnalysisDeclContextInterface.hpp  AnalysisDeclContextInterface.td  CMakeLists.txt  Common.td
include/vast/Interfaces/CFG/: CFGInterface.hpp  CFGInterface.td  CMakeLists.txt  Common.td
include/vast/Interfaces/ClangAST/: ASTContextInterface.hpp  ASTContextInterface.td  ASTDeclInterface.hpp  ASTDeclInterface.td  ASTExprInterface.hpp  ASTExprInterface.td  ASTStmtVisitorInterface.hpp  ASTStmtVisitorInterface.td  ASTTypeInterface.hpp  ASTTypeInterface.td  CMakeLists.txt
lib/vast/: CMakeLists.txt  VastDialect.cpp  VastOps.cpp
lib/vast/ABI/: ABI.cpp  CMakeLists.txt
lib/vast/Analyses/: CMakeLists.txt  Iterators.cpp
lib/vast/Analysis/: CMakeLists.txt  Iterators.cpp
lib/vast/CC1/: CMakeLists.txt  FromSource.cpp
lib/vast/CodeGen/: ABIInfo.cpp  ArgInfo.cpp  AttrVisitorProxy.cpp  CMakeLists.txt  CodeGen.cpp  CodeGenBlock.cpp  CodeGenDriver.cpp  CodeGenFunction.cpp  CodeGenGlobal.cpp  CodeGenMembers.cpp  CodeGenModule.cpp  CodeGenScope.cpp  CodeGenStmtVisitor.cpp  CodeGenTypeDriver.cpp  CodeGenTypeVisitor.cpp  CodeGenVar.cpp  CodeGenVisitor.cpp  CodeGenVisitorBase.cpp  CodeGenVisitorList.cpp  DataLayout.cpp  DefaultAttrVisitor.cpp  DefaultDeclVisitor.cpp  DefaultStmtVisitor.cpp  DefaultSymbolGenerator.cpp  DefaultTypeVisitor.cpp  DefaultVisitor.cpp  FunctionInfo.cpp  Generator.cpp  ItaniumCXXABI.cpp  Mangler.cpp  Module.cpp  Passes.cpp  TargetInfo.cpp  TypeInfo.cpp  TypesGenerator.cpp  UnsupportedVisitor.cpp  Util.cpp
lib/vast/Conversion/: CMakeLists.txt  HLToFunc.cpp  PassesDetails.hpp  ToLLVM.cpp
lib/vast/Conversion/ABI/: CMakeLists.txt  EmitABI.cpp  LowerABI.cpp  Passes.cpp
lib/vast/Conversion/Common/: CMakeLists.txt  Common.hpp  CoreToLLVM.cpp  IRsToLLVM.cpp  LLCFToLLVM.hpp  Passes.cpp  ToLLVM.cpp
lib/vast/Conversion/Core/: CMakeLists.txt  Passes.cpp  ToLLVM.cpp
lib/vast/Conversion/FromHL/: CMakeLists.txt  EmitLazyRegions.cpp  Passes.cpp  PassesDetails.hpp  ResolveTypeDefs.cpp  StructsToLLVM.cpp  ToFunc.cpp  ToHLBI.cpp  ToLLCF.cpp  ToLLFunc.cpp  ToLLGEPs.cpp  ToLLVars.cpp
lib/vast/Conversion/Generic/: CMakeLists.txt  FnArgsToAlloca.cpp  LowerValueCategories.cpp
lib/vast/Conversion/HL/: CMakeLists.txt  DCE.cpp  ExportFnInfo.cpp  HLLowerTypes.cpp  LowerElaboratedTypes.cpp  LowerTypeDefs.cpp  Passes.cpp  SpliceTrailingScopes.cpp  UDE.cpp
lib/vast/Conversion/PDLL/: CMakeLists.txt  HLToFunc.cpp
lib/vast/Conversion/Parser/: CMakeLists.txt  CleanUp.cpp  PassesDetails.hpp  Prune.cpp  ReconcileCasts.cpp  Refine.cpp  ToParser.cpp  Utils.hpp
lib/vast/Conversion/ToLLVM/: CMakeLists.txt  Common.hpp  IRsToLLVM.cpp  LLCFToLLVM.hpp  Passes.cpp
lib/vast/Conversion/ToMem/: CMakeLists.txt  EvictStaticLocals.cpp  (+3 more)
lib/vast/Dialect/: CMakeLists.txt  VastDialect.cpp  VastOps.cpp  VastTypes.cpp
lib/vast/Frontend/: Action.cpp  CMakeLists.txt  Consumer.cpp  GenAction.cpp  Generator.cpp  Options.cpp  Pipelines.cpp  Sarif.cpp  Targets.cpp
lib/vast/Interfaces/: ASTContextInterface.cpp  ASTDeclInterface.cpp  ASTExprInterface.cpp  ASTStmtVisitorInterface.cpp  ASTTypeInterface.cpp  AggregateTypeDefinitionInterface.cpp  AliasTypeInterface.cpp  CMakeLists.txt  DefaultDataLayoutTypeInterface.cpp  ElementTypeInterface.cpp  SymbolInterface.cpp  SymbolRefInterface.cpp  SymbolTableInterface.cpp  TypeQualifiersInterfaces.cpp  TypeTraitExprInterface.cpp  TypedAttrInterface.cpp
lib/vast/Tower/: CMakeLists.txt  Link.cpp  LocationInfo.cpp  PassUtils.cpp  Tower.cpp
lib/vast/Translation/: CMakeLists.txt  CodeGen.cpp  CodeGenDriver.cpp  CodeGenFunction.cpp  CodeGenScope.cpp  CodeGenStmtVisitor.cpp  CodeGenTypeDriver.cpp  CodeGenTypeVisitor.cpp  DataLayout.cpp  FromSource.cpp  HighLevelTypeConverter.cpp  HighLevelVisitor.cpp  Mangler.cpp  Types.cpp
lib/vast/Util/: CMakeLists.txt  Pipeline.cpp  Region.cpp  Snapshots.cpp  TypeConverter.cpp  Warnings.cpp
lib/vast/server/: CMakeLists.txt  io.cpp
tools/vast-cc/: CMakeLists.txt  vast-cc.cpp
tools/vast-front/: CMakeLists.txt  cc1.cpp  compiler_invocation.cpp  driver.cpp
tools/vast-lsp-server/: CMakeLists.txt  vast-lsp-server.cpp
tools/vast-mutate/: CMakeLists.txt  mutator.cpp  mutatorUtil.cpp  vast-mutate.cpp
tools/vast-opt/: CMakeLists.txt  vast-opt.cpp
tools/vast-query/: CMakeLists.txt  extract_func.py  vast-query.cpp
tools/vast-repl/: CMakeLists.txt  cli.cpp  codegen.cpp  command.cpp  config.cpp  state.cpp  vast-repl.cpp
(+1226 files in other folders)
